[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netxplore-dsga-jan2026"
version = "0.1.0"
description = "Property-based tests for NetworkX graph algorithms using Hypothesis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BRDhananjaya" }
]
dependencies = [
  "networkx>=3.3",
  "hypothesis>=6.112"
]

[project.optional-dependencies]
dev = [
  "networkx>=3.3",
  "hypothesis>=6.112",
  "pytest>=8.2",
  "ruff>=0.6"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"